--- a/full/form_inputs.html
+++ b/full/form_inputs.html
@@ -487,6 +487,7 @@
 								<li class="nav-item"><a href="form_inputs.html" class="nav-link active">LISTADO</a></li>
 								<li class="nav-item"><a href="form_checkboxes_radios.html" class="nav-link">AGREGAR</a></li>
 								<li class="nav-item"><a href="form_select2.html" class="nav-link">EDITAR</a></li>
+								<li class="nav-item"><a href="components_modals.html" class="nav-link">DEPARTAMENTO</a></li>
 								<!--
 								<li class="nav-item"><a href="form_multiselect.html" class="nav-link">Bootstrap multiselect</a></li>
 								<li class="nav-item"><a href="form_input_groups.html" class="nav-link">Input groups</a></li>
@@ -2200,7 +2201,7 @@
 							</div>
 						</form>
 					</div>
-				</div>/-->
+				</div>/-->s
 				<!-- /form inputs -->
 
 			</div>
