--- a/full/form_select2.html
+++ b/full/form_select2.html
@@ -488,6 +488,7 @@
 								<li class="nav-item"><a href="form_inputs.html" class="nav-link">LISTADO</a></li>
 								<li class="nav-item"><a href="form_checkboxes_radios.html" class="nav-link">REGISTRAR</a></li>
 								<li class="nav-item"><a href="form_select2.html" class="nav-link active">EDITAR</a></li>
+								<li class="nav-item"><a href="components_modals.html" class="nav-link">DEPARTAMENTO</a></li>
 								<!--
 								<li class="nav-item"><a href="form_multiselect.html" class="nav-link">Bootstrap multiselect</a></li>
 								<li class="nav-item"><a href="form_input_groups.html" class="nav-link">Input groups</a></li>
