--- a/full/form_checkboxes_radios.html
+++ b/full/form_checkboxes_radios.html
@@ -1219,7 +1219,7 @@
 			<div class="page-header page-header-light">
 				<div class="page-header-content header-elements-md-inline">
 					<div class="page-title d-flex">
-						<h4><i class="icon-arrow-left52 mr-2"></i> <span class="font-weight-semibold">Forms</span> - Checkboxes &amp; Radios</h4>
+						<h4><i class="icon-arrow-left52 mr-2"></i> <span class="font-weight-semibold"></span>EMPLEADOS</h4>
 						<a href="#" class="header-elements-toggle text-default d-md-none"><i class="icon-more"></i></a>
 					</div>
 
@@ -1236,8 +1236,8 @@
 					<div class="d-flex">
 						<div class="breadcrumb">
 							<a href="index.html" class="breadcrumb-item"><i class="icon-home2 mr-2"></i> Home</a>
-							<a href="form_checkboxes_radios.html" class="breadcrumb-item">Forms</a>
-							<span class="breadcrumb-item active">Checkboxes &amp; radios</span>
+							<a href="form_checkboxes_radios.html" class="breadcrumb-item">Empleados</a>
+							<span class="breadcrumb-item active">Registrar</span>
 						</div>
 
 						<a href="#" class="header-elements-toggle text-default d-md-none"><i class="icon-more"></i></a>
@@ -1278,7 +1278,7 @@
 <!-- Form inputs -->
 				<div class="card">
 					<div class="card-header header-elements-inline">
-						<h5 class="card-title">ENTRADAS</h5>
+						<h5 class="card-title">REGISTRAR</h5>
 						<div class="header-elements">
 							<div class="list-icons">
 		                		<a class="list-icons-item" data-action="collapse"></a>
@@ -1293,86 +1293,88 @@
 
 						<form action="#">
 							<fieldset class="mb-3">
-								<legend class="text-uppercase font-size-sm font-weight-bold">Basic inputs</legend>
+								<legend class="text-uppercase font-size-sm font-weight-bold">Empleados</legend>
 
 								<div class="form-group row">
-									<label class="col-form-label col-lg-2">Default text input</label>
+									<label class="col-form-label col-lg-2">NOMBRE</label>
 									<div class="col-lg-10">
 										<input type="text" class="form-control">
 									</div>
 								</div>
 
 								<div class="form-group row">
-									<label class="col-form-label col-lg-2">Password</label>
+									<label class="col-form-label col-lg-2">APELLIDO</label>
 									<div class="col-lg-10">
 										<input type="password" class="form-control">
 									</div>
 								</div>
 
 								<div class="form-group row">
-									<label class="col-form-label col-lg-2">Input with placeholder</label>
+									<label class="col-form-label col-lg-2">EDAD</label>
 									<div class="col-lg-10">
-										<input type="text" class="form-control" placeholder="Enter your username...">
+										<input type="text" class="form-control">
 									</div>
 								</div>
 
 								<div class="form-group row">
-									<label class="col-form-label col-lg-2">Read only field</label>
+									<label class="col-form-label col-lg-2">DIRECCIÓN</label>
 									<div class="col-lg-10">
-										<input type="text" class="form-control" readonly value="read only">
+										<input type="text" class="form-control">
 									</div>
 								</div>
 
 								<div class="form-group row">
-									<label class="col-form-label col-lg-2">Disabled field</label>
+									<label class="col-form-label col-lg-2">CELULAR</label>
 									<div class="col-lg-10">
-										<input type="text" class="form-control" disabled value="disabled">
+										<input type="text" class="form-control">
 									</div>
 								</div>
 
 								<div class="form-group row">
-									<label class="col-form-label col-lg-2">Predefined value</label>
+									<label class="col-form-label col-lg-2">NOMBRE DE USUARIO</label>
 									<div class="col-lg-10">
-										<input type="text" class="form-control" value="http://">
+										<input type="text" class="form-control">
 									</div>
 								</div>
 
 								<div class="form-group row">
-									<label class="col-form-label col-lg-2">Disabled autocomplete</label>
+									<label class="col-form-label col-lg-2">CORREO</label>
 									<div class="col-lg-10">
-										<input type="text" class="form-control" placeholder="Autocomplete is off" autocomplete="off">
+										<input type="text" class="form-control" placeholder="gabriela18@gmail.com" autocomplete="off">
 									</div>
 								</div>
 
 								<div class="form-group row">
-									<label class="col-form-label col-lg-2">Maximum value</label>
+									<label class="col-form-label col-lg-2">MATRICULA</label>
 									<div class="col-lg-10">
-										<input type="text" class="form-control" maxlength="4" placeholder="Maximum 4 characters">
+										<input type="text" class="form-control" maxlength="4" placeholder="MAXIMO 7 CARACTERES">
 									</div>
 								</div>
-
+<!--
 								<div class="form-group row">
 									<label class="col-form-label col-lg-2 cursor-pointer" for="clickable-label">Focus on label click</label>
 									<div class="col-lg-10">
 										<input type="text" class="form-control" id="clickable-label" placeholder="Field focus on label click">
 									</div>
 								</div>
-
+/-->
+<!--
 								<div class="form-group row">
 									<label class="col-form-label col-lg-2">Static text</label>
 									<div class="col-lg-10">
 										<div class="form-control-plaintext">This is a static text</div>
 									</div>
 								</div>
-
+/-->
+<!--
 								<div class="form-group row">
 									<label class="col-form-label col-lg-2">Textarea</label>
 									<div class="col-lg-10">
 										<textarea rows="3" cols="3" class="form-control" placeholder="Default textarea"></textarea>
 									</div>
-								</div>
+								</div>/-->
 							</fieldset>
-
+<!--
 							<fieldset class="mb-3">
 								<legend class="text-uppercase font-size-sm font-weight-bold">Basic selects</legend>
 
@@ -2075,9 +2077,10 @@
 							</div>
 						</form>
 					</div>
-				</div>
+				</div>/-->
 				<!-- /form inputs -->
 				<!-- Checkboxes -->
+				<!--
             	<div class="card">
 					<div class="card-header header-elements-inline">
 						<h5 class="card-title">Checkboxes</h5>
@@ -2264,11 +2267,12 @@
         					</div>
     					</div>
 					</div>
-				</div>
+				</div>/-->
 				<!-- /checkboxes -->
 
 
 				<!-- Radio buttons -->
+				<!--
             	<div class="card">
 					<div class="card-header header-elements-inline">
 						<h5 class="card-title">Radio buttons</h5>
@@ -2454,11 +2458,12 @@
         					</div>
         				</div>
 					</div>
-				</div>
+				</div>/-->
 				<!-- /radio buttons -->
 
 
 				<!-- Custom Bootstrap inputs -->
+				<!--
             	<div class="card">
 					<div class="card-header header-elements-inline">
 						<h5 class="card-title">Custom Bootstrap inputs</h5>
@@ -2605,11 +2610,12 @@
 						</div>
 
     				</div>
-				</div>
+				</div>/-->
 				<!-- /custom Bootstrap inputs -->
 
 
 				<!-- Colors -->
+				<!--
             	<div class="card">
 					<div class="card-header header-elements-inline">
 						<h5 class="card-title">Color options</h5>
@@ -2733,11 +2739,12 @@
 							</div>
 						</div>
     				</div>
-				</div>
+				</div>/-->
 				<!-- /colors -->
 
 
 				<!-- Switchery toggles -->
+				<!--
 				<div class="card">
 					<div class="card-header header-elements-inline">
 						<h5 class="card-title">Switchery toggles</h5>
@@ -2923,11 +2930,12 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div>/-->
 				<!-- /switchery toggles -->
 
 
 				<!-- Bootstrap switch -->
+				<!--
 				<div class="card">
 					<div class="card-header header-elements-inline">
 						<h5 class="card-title">Bootstrap switch</h5>
@@ -3130,7 +3138,7 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div>/-->
 				<!-- /bootstrap switch -->
 
 			</div>
@@ -3147,17 +3155,21 @@
 				</div>
 
 				<div class="navbar-collapse collapse" id="navbar-footer">
-					<span class="navbar-text">
-						&copy; 2015 - 2018. <a href="#">Limitless Web App Kit</a> by <a href="http://themeforest.net/user/Kopyov" target="_blank">Eugene Kopyov</a>
+					<span class="navbar-text"> <a href="#"></a> <a href="http://themeforest.net/user/Kopyov" target="_blank"></a>
 					</span>
-
+					<div>
+					<button>
+						GUARDAR
+					</button>
+						</div>
+<!--
 					<ul class="navbar-nav ml-lg-auto">
 						<li class="nav-item"><a href="https://kopyov.ticksy.com/" class="navbar-nav-link" target="_blank"><i class="icon-lifebuoy mr-2"></i> Support</a></li>
 						<li class="nav-item"><a href="http://demo.interface.club/limitless/docs/" class="navbar-nav-link" target="_blank"><i class="icon-file-text2 mr-2"></i> Docs</a></li>
 						<li class="nav-item"><a href="https://themeforest.net/item/limitless-responsive-web-application-kit/13080328?ref=kopyov" class="navbar-nav-link font-weight-semibold"><span class="text-pink-400"><i class="icon-cart2 mr-2"></i> Purchase</span></a></li>
 					</ul>
 				</div>
-			</div>
+			</div>/-->
 			<!-- /footer -->
 
 		</div>
