--- a/full/form_select2.html
+++ b/full/form_select2.html
@@ -1220,7 +1220,7 @@
 			<div class="page-header page-header-light">
 				<div class="page-header-content header-elements-md-inline">
 					<div class="page-title d-flex">
-						<h4><i class="icon-arrow-left52 mr-2"></i> <span class="font-weight-semibold">Forms</span> - Select2 Selects</h4>
+						<h4><i class="icon-arrow-left52 mr-2"></i> <span class="font-weight-semibold">EMPLEADOS</span></h4>
 						<a href="#" class="header-elements-toggle text-default d-md-none"><i class="icon-more"></i></a>
 					</div>
 
@@ -1237,8 +1237,8 @@
 					<div class="d-flex">
 						<div class="breadcrumb">
 							<a href="index.html" class="breadcrumb-item"><i class="icon-home2 mr-2"></i> Home</a>
-							<a href="form_select2.html" class="breadcrumb-item">Forms</a>
-							<span class="breadcrumb-item active">Select2 selects</span>
+							<a href="form_select2.html" class="breadcrumb-item">Empleados</a>
+							<span class="breadcrumb-item active">Editar</span>
 						</div>
 
 						<a href="#" class="header-elements-toggle text-default d-md-none"><i class="icon-more"></i></a>
@@ -1276,30 +1276,105 @@
 			<div class="content">
 
 				<!-- Select2 selects -->
+				<!--
 				<div class="mb-3">
 					<h6 class="mb-0 font-weight-semibold">
-						Basic setup
+						EDITAR
 					</h6>
-					<span class="text-muted d-block">Examples with basic options</span>
-				</div>
-
+					<span class="text-muted d-block"></span>
+				</div>/-->
+<!--
 				<div class="row">
 					<div class="col-md-6">
 						<div class="card">
 							<div class="card-header header-elements-inline">
-								<h5 class="card-title">Single select</h5>
+								<h5 class="card-title">Empleados</h5>
 								<div class="header-elements">
 									<div class="list-icons">
 				                		<a class="list-icons-item" data-action="collapse"></a>
 				                		<a class="list-icons-item" data-action="reload"></a>
 				                		<a class="list-icons-item" data-action="remove"></a>
 				                	</div>
-			                	</div>
+			                	</div>/-->
 							</div>
+							<div class="card">
+					<div class="card-header header-elements-inline">
+						<h5 class="card-title">EDITAR</h5>
+						<div class="header-elements">
+							<div class="list-icons">
+		                		<a class="list-icons-item" data-action="collapse"></a>
+		                		<a class="list-icons-item" data-action="reload"></a>
+		                		<a class="list-icons-item" data-action="remove"></a>
+		                	</div>
+	                	</div>
+					</div>
 
+					<div class="card-body">
+						<p class="mb-4"></p>
+
+						<form action="#">
+							<fieldset class="mb-3">
+								<legend class="text-uppercase font-size-sm font-weight-bold">Empleados</legend>
+
+								<div class="form-group row">
+									<label class="col-form-label col-lg-2">NOMBRE</label>
+									<div class="col-lg-10">
+										<input type="text" class="form-control">
+									</div>
+								</div>
+
+								<div class="form-group row">
+									<label class="col-form-label col-lg-2">APELLIDO</label>
+									<div class="col-lg-10">
+										<input type="password" class="form-control">
+									</div>
+								</div>
+
+								<div class="form-group row">
+									<label class="col-form-label col-lg-2">EDAD</label>
+									<div class="col-lg-10">
+										<input type="text" class="form-control">
+									</div>
+								</div>
+
+								<div class="form-group row">
+									<label class="col-form-label col-lg-2">DIRECCIÓN</label>
+									<div class="col-lg-10">
+										<input type="text" class="form-control">
+									</div>
+								</div>
+
+								<div class="form-group row">
+									<label class="col-form-label col-lg-2">CELULAR</label>
+									<div class="col-lg-10">
+										<input type="text" class="form-control">
+									</div>
+								</div>
+
+								<div class="form-group row">
+									<label class="col-form-label col-lg-2">NOMBRE DE USUARIO</label>
+									<div class="col-lg-10">
+										<input type="text" class="form-control">
+									</div>
+								</div>
+
+								<div class="form-group row">
+									<label class="col-form-label col-lg-2">CORREO</label>
+									<div class="col-lg-10">
+										<input type="text" class="form-control" placeholder="gabriela18@gmail.com" autocomplete="off">
+									</div>
+								</div>
+
+								<div class="form-group row">
+									<label class="col-form-label col-lg-2">MATRICULA</label>
+									<div class="col-lg-10">
+										<input type="text" class="form-control" maxlength="4" placeholder="MAXIMO 7 CARACTERES">
+									</div>
+								</div>
+<!--
 							<div class="card-body">
 								<div class="form-group">
-									<label>Basic select</label>
+									<label></label>
 									<select class="form-control select" data-fouc>
 										<optgroup label="Mountain Time Zone">
 											<option value="AZ">Arizona</option>
@@ -1711,11 +1786,12 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div>/-->
 				<!-- /select2 selects -->
 
 
 				<!-- Select2 sizing -->
+				<!--
 				<div class="mb-3 pt-2">
 					<h6 class="mb-0 font-weight-semibold">
 						Select sizing
@@ -1871,11 +1947,12 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div>/-->
 				<!-- /select2 sizing -->
 
 
 				<!-- Select2 advanced -->
+				<!--
 				<div class="mb-3 pt-2">
 					<h6 class="mb-0 font-weight-semibold">
 						Advanced usage
@@ -2276,7 +2353,7 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div>/-->
 				<!-- /select2 advanced -->          
 
 			</div>
@@ -2291,7 +2368,7 @@
 						Footer
 					</button>
 				</div>
-
+<!--
 				<div class="navbar-collapse collapse" id="navbar-footer">
 					<span class="navbar-text">
 						&copy; 2015 - 2018. <a href="#">Limitless Web App Kit</a> by <a href="http://themeforest.net/user/Kopyov" target="_blank">Eugene Kopyov</a>
@@ -2303,7 +2380,7 @@
 						<li class="nav-item"><a href="https://themeforest.net/item/limitless-responsive-web-application-kit/13080328?ref=kopyov" class="navbar-nav-link font-weight-semibold"><span class="text-pink-400"><i class="icon-cart2 mr-2"></i> Purchase</span></a></li>
 					</ul>
 				</div>
-			</div>
+			</div>/-->
 			<!-- /footer -->
 
 		</div>
