--- a/full/components_modals.html
+++ b/full/components_modals.html
@@ -647,14 +647,15 @@
 
 						<!-- Layout -->
 						<!--
-						<li class="nav-item-header"><div class="text-uppercase font-size-xs line-height-xs">Layout</div> <i class="icon-menu" title="Layout options"></i></li>
+						<li class="nav-item-header"><div class="text-uppercase font-size-xs line-height-xs">EMPLEADOS</div> <i class="icon-menu" title="Layout options"></i></li>
 						<li class="nav-item nav-item-submenu">
-							<a href="#" class="nav-link"><i class="icon-stack2"></i> <span>Page layouts</span></a>
+							<a href="#" class="nav-link"><i class="icon-stack2"></i> <span>DEPARTAMENTOS</span></a>
 
 							<ul class="nav nav-group-sub" data-submenu-title="Page layouts">
-								<li class="nav-item"><a href="layout_fixed_navbar.html" class="nav-link">Fixed navbar</a></li>
-								<li class="nav-item"><a href="layout_fixed_sidebar_custom.html" class="nav-link">Fixed sidebar - custom scroll</a></li>
-								<li class="nav-item"><a href="layout_fixed_sidebar_native.html" class="nav-link">Fixed sidebar - native scroll</a></li>
+								<li class="nav-item"><a href="layout_fixed_navbar.html" class="nav-link">LISTADO</a></li>
+								<li class="nav-item"><a href="layout_fixed_sidebar_custom.html" class="nav-link">REGISTRAR</a></li>
+								<li class="nav-item"><a href="layout_fixed_sidebar_native.html" class="nav-link">EDITAR</a></li>
+								
 								<li class="nav-item"><a href="layout_fixed_hideable_navbar.html" class="nav-link">Hideable navbar</a></li>
 								<li class="nav-item"><a href="layout_fixed_footer.html" class="nav-link">Fixed footer</a></li>
 								<li class="nav-item-divider"></li>
@@ -1218,7 +1219,7 @@
 			<div class="page-header page-header-light">
 				<div class="page-header-content header-elements-md-inline">
 					<div class="page-title d-flex">
-						<h4><i class="icon-arrow-left52 mr-2"></i> <span class="font-weight-semibold">Components</span> - Modal Dialogs</h4>
+						<h4><i class="icon-arrow-left52 mr-2"></i> <span class="font-weight-semibold">DEPARTAMENTOS</span>R'</h4>
 						<a href="#" class="header-elements-toggle text-default d-md-none"><i class="icon-more"></i></a>
 					</div>
 
@@ -1297,27 +1298,27 @@
 									<th colspan="3" class="table-active">CAMPOS</th>
 								</tr>
 								<tr>
-									<td style="width: 20%;">NOMBRE</td>
+									<td style="width: 20%;">NOMBRE DEL DEPARTAMENTO</td>
 									<td style="width: 20%;"><button type="button" class="btn btn-light" data-toggle="modal" data-target="#modal_default">FILING<i class="icon-play3 ml-2"></i></button></td>
 									<td></td>
 								</tr>
 								<tr>
-									<td>APELLIDO</td>
+									<td>N° DE DEPARTAMENTO</td>
 									<td><button type="button" class="btn btn-light" data-toggle="modal" data-target="#modal_iconified">FILING<i class="icon-play3 ml-2"></i></button></td>
 									<td></td>
 								</tr>
 								<tr>
-									<td>CLAVE</td>
+									<td>N° DE PISO</td>
 									<td><button type="button" class="btn btn-light" data-toggle="modal" data-target="#modal_backdrop">FILING <i class="icon-play3 ml-2"></i></button></td>
 									<td></td>
 								</tr>
 								<tr>
-									<td>N° DE DEPARTAMENTO</td>
+									<td>EDIFICIO</td>
 									<td><button type="button" class="btn btn-light" data-toggle="modal" data-target="#modal_keyboard">FILING<i class="icon-play3 ml-2"></i></button></td>
 									<td></td>
 								</tr>
 								<tr>
-									<td>DESCRIPCIÓN</td>
+									<td>CORREO</td>
 									<td><button type="button" class="btn btn-light" data-toggle="modal" data-target="#modal_animation">FILING<i class="icon-play3 ml-2"></i></button></td>
 									<td></td>
 								</tr>
@@ -1545,18 +1546,18 @@
 					<div class="modal-dialog">
 						<div class="modal-content">
 							<div class="modal-header">
-								<h5 class="modal-title">NOMBRE:</h5>
+								<h5 class="modal-title">NOMBRE DEL DEPARTAMENTO</h5>
 								<button type="button" class="close" data-dismiss="modal">&times;</button>
 							</div>
 
 							<div class="modal-body">
 								<h6 class="font-weight-semibold"></h6>
-								<p>Nombre completo, empezando con la primer letra en mayuscula *ejemplo "Angel".</p>
+								<p></p>
 
 								<hr>
 
 								<h6 class="font-weight-semibold"></h6>
-								<p>En caso de tener dos nombres se deveran iniciar con mayuscula la primer letra como se menciona anterior mente *ejemplo "Angel Uriel".</p>
+								<p></p>
 							</div>
 
 							<div class="modal-footer">
@@ -1574,18 +1575,18 @@
 					<div class="modal-dialog">
 						<div class="modal-content">
 							<div class="modal-header">
-								<h5 class="modal-title"><i class="icon-menu7 mr-2"></i> &nbsp; APELLIDO:</h5>
+								<h5 class="modal-title"><i class="icon-menu7 mr-2"></i> &nbsp; N° DE DEPARTAMENTO</h5>
 								<button type="button" class="close" data-dismiss="modal">&times;</button>
 							</div>
 
 							<div class="modal-body">
 								<div class="alert alert-info alert-dismissible alert-styled-left border-top-0 border-bottom-0 border-right-0">
-					                <span class="font-weight-semibold">Hola</span> Verifica si tu apellido esta correctamente escrito.
+					                <span class="font-weight-semibold"></span> 
 					                <button type="button" class="close" data-dismiss="alert">×</button>
 					            </div>
 
 								<h6 class="font-weight-semibold"><i class="icon-law mr-2"></i> </h6>
-								<p>Las primeras letras del apellido deben comenzar con mayusculas.</p>
+								<p></p>
 
 								<hr>
 
@@ -1607,13 +1608,13 @@
 					<div class="modal-dialog">
 						<div class="modal-content">
 							<div class="modal-header">
-								<h5 class="modal-title">CLAVE:</h5>
+								<h5 class="modal-title">N° DE PISO</h5>
 								<button type="button" class="close" data-dismiss="modal">&times;</button>
 							</div>
 
 							<div class="modal-body">
 								<h6 class="font-weight-semibold"></h6>
-								<p>Clave mayor a 5 digitos numericos o alfanumericos.</p>
+								<p></p>
 
 								<hr>
 
@@ -1637,13 +1638,13 @@
 					<div class="modal-dialog">
 						<div class="modal-content">
 							<div class="modal-header">
-								<h5 class="modal-title">N° DE DEPARTAMENTO:</h5>
+								<h5 class="modal-title">EDIFICIO</h5>
 								<button type="button" class="close" data-dismiss="modal">&times;</button>
 							</div>
 
 							<div class="modal-body">
 								<h6 class="font-weight-semibold"></h6>
-								<p>N° de 5 caracteres minimo.</p>
+								<p></p>
 
 								<hr>
 
@@ -1667,13 +1668,13 @@
 					<div class="modal-dialog">
 						<div class="modal-content">
 							<div class="modal-header">
-								<h5 class="modal-title">DESCRIPCIÓN:</h5>
+								<h5 class="modal-title">CORREO</h5>
 								<button type="button" class="close" data-dismiss="modal">&times;</button>
 							</div>
 
 							<div class="modal-body">
 								<h6 class="font-weight-semibold"></h6>
-								<p>En que edificio y en que número de piso esta ubicado.</p>
+								<p></p>
 
 								<hr>
 
@@ -2619,7 +2620,7 @@
 						Footer
 					</button>
 				</div>
-
+<!--
 				<div class="navbar-collapse collapse" id="navbar-footer">
 					<span class="navbar-text">
 						&copy; 2015 - 2018. <a href="#">Limitless Web App Kit</a> by <a href="http://themeforest.net/user/Kopyov" target="_blank">Eugene Kopyov</a>
@@ -2631,7 +2632,7 @@
 						<li class="nav-item"><a href="https://themeforest.net/item/limitless-responsive-web-application-kit/13080328?ref=kopyov" class="navbar-nav-link font-weight-semibold"><span class="text-pink-400"><i class="icon-cart2 mr-2"></i> Purchase</span></a></li>
 					</ul>
 				</div>
-			</div>
+			</div>/-->
 			<!-- /footer -->
 
 		</div>
