--- a/full/index.html
+++ b/full/index.html
@@ -335,7 +335,7 @@
 				<li class="nav-item dropdown dropdown-user">
 					<a href="#" class="navbar-nav-link d-flex align-items-center dropdown-toggle" data-toggle="dropdown">
 						<img src="../../../../global_assets/images/placeholders/placeholder.jpg" class="rounded-circle mr-2" height="34" alt="">
-						<span>Victoria</span>
+						<span>ANGEL HERNANDEZ</span>
 					</a>
 
 					<div class="dropdown-menu dropdown-menu-right">
@@ -360,6 +360,7 @@
 		<div class="sidebar sidebar-dark sidebar-main sidebar-expand-md">
 
 			<!-- Sidebar mobile toggler -->
+
 			<div class="sidebar-mobile-toggler text-center">
 				<a href="#" class="sidebar-mobile-main-toggle">
 					<i class="icon-arrow-left8"></i>
@@ -385,7 +386,7 @@
 							</div>
 
 							<div class="media-body">
-								<div class="media-title font-weight-semibold">Victoria Baker</div>
+								<div class="media-title font-weight-semibold">ANGEL HERNANDEZ</div>
 								<div class="font-size-xs opacity-50">
 									<i class="icon-pin font-size-sm"></i> &nbsp;Santa Ana, CA
 								</div>
@@ -491,8 +492,7 @@
 								<li class="nav-item"><a href="form_inputs.html" class="nav-link">LISTADO</a></li>
 								<li class="nav-item"><a href="form_checkboxes_radios.html" class="nav-link">REGISTRAR</a></li>
 								<li class="nav-item"><a href="form_select2.html" class="nav-link">EDITAR</a></li>
-								<li class="nav-item"><a href="components_modals.html" class="nav-link">DEPARTAMENTO</a></li>
-
+								
 								<!--
 								<li class="nav-item"><a href="form_multiselect.html" class="nav-link">Bootstrap multiselect</a></li>
 								<li class="nav-item"><a href="form_input_groups.html" class="nav-link">Input groups</a></li>
@@ -652,14 +652,16 @@
 
 						<!-- Layout -->
 						<!--
-						<li class="nav-item-header"><div class="text-uppercase font-size-xs line-height-xs">Layout</div> <i class="icon-menu" title="Layout options"></i></li>
-						<li class="nav-item nav-item-submenu">
-							<a href="#" class="nav-link"><i class="icon-stack2"></i> <span>Page layouts</span></a>
+						<li class="nav-item-header"><div class="text-uppercase font-size-xs line-height-xs">EMPLEADOS</div> <i class="icon-menu" title="Layout options"></i></li>
+						<li class="nav-item nav-item-submenu nav-item-expanded nav-item-open">
+							<a href="#" class="nav-link"><i class="icon-stack2"></i> <span>DDEPARTAMENTOS</span></a>
 
 							<ul class="nav nav-group-sub" data-submenu-title="Page layouts">
-								<li class="nav-item"><a href="layout_fixed_navbar.html" class="nav-link">Fixed navbar</a></li>
-								<li class="nav-item"><a href="layout_fixed_sidebar_custom.html" class="nav-link">Fixed sidebar - custom scroll</a></li>
-								<li class="nav-item"><a href="layout_fixed_sidebar_native.html" class="nav-link">Fixed sidebar - native scroll</a></li>
+								<li class="nav-item"><a href="form_inputs.html" class="nav-link active">LISTADO</a></li>
+								<li class="nav-item"><a href="components_modals.html" class="nav-link">DEPARTAMENTO</a></li>
+								<li class="nav-item"><a href="form_checkboxes_radios.html" class="nav-link">REGISTRAR</a></li>
+								<li class="nav-item"><a href="form_select2.html" class="nav-link">EDITAR</a></li>
+								
 								<li class="nav-item"><a href="layout_fixed_hideable_navbar.html" class="nav-link">Hideable navbar</a></li>
 								<li class="nav-item"><a href="layout_fixed_footer.html" class="nav-link">Fixed footer</a></li>
 								<li class="nav-item-divider"></li>
@@ -1282,6 +1284,7 @@
 					<div class="col-xl-7">
 
 						<!-- Traffic sources -->
+						<!--
 						<div class="card">
 							<div class="card-header header-elements-inline">
 								<h6 class="card-title">Traffic sources</h6>
@@ -1339,7 +1342,7 @@
 							</div>
 
 							<div class="chart position-relative" id="traffic-sources"></div>
-						</div>
+						</div>/-->
 						<!-- /traffic sources -->
 
 					</div>
@@ -1347,6 +1350,7 @@
 					<div class="col-xl-5">
 
 						<!-- Sales stats -->
+						<!--
 						<div class="card">
 							<div class="card-header header-elements-inline">
 								<h6 class="card-title">Sales statistics</h6>
@@ -1387,7 +1391,7 @@
 
 							<div class="chart mb-2" id="app_sales"></div>
 							<div class="chart" id="monthly-sales-stats"></div>
-						</div>
+						</div>/-->
 						<!-- /sales stats -->
 
 					</div>
@@ -1400,6 +1404,7 @@
 					<div class="col-xl-8">
 
 						<!-- Marketing campaigns -->
+						<!--
 						<div class="card">
 							<div class="card-header header-elements-sm-inline">
 								<h6 class="card-title">Marketing campaigns</h6>
@@ -1723,7 +1728,7 @@
 									</tbody>
 								</table>
 							</div>
-						</div>
+						</div>/-->
 						<!-- /marketing campaigns -->
 
 
@@ -1732,6 +1737,7 @@
 							<div class="col-lg-4">
 
 								<!-- Members online -->
+								<!--
 								<div class="card bg-teal-400">
 									<div class="card-body">
 										<div class="d-flex">
@@ -1748,7 +1754,7 @@
 									<div class="container-fluid">
 										<div id="members-online"></div>
 									</div>
-								</div>
+								</div>/-->
 								<!-- /members online -->
 
 							</div>
@@ -1756,6 +1762,7 @@
 							<div class="col-lg-4">
 
 								<!-- Current server load -->
+								<!--
 								<div class="card bg-pink-400">
 									<div class="card-body">
 										<div class="d-flex">
@@ -1780,7 +1787,7 @@
 									</div>
 
 									<div id="server-load"></div>
-								</div>
+								</div>/-->
 								<!-- /current server load -->
 
 							</div>
@@ -1788,6 +1795,7 @@
 							<div class="col-lg-4">
 
 								<!-- Today's revenue -->
+								<!--
 								<div class="card bg-blue-400">
 									<div class="card-body">
 										<div class="d-flex">
@@ -1804,7 +1812,7 @@
 									</div>
 
 									<div id="today-revenue"></div>
-								</div>
+								</div>/-->
 								<!-- /today's revenue -->
 
 							</div>
@@ -1813,6 +1821,7 @@
 
 
 						<!-- Support tickets -->
+						<!--
 						<div class="card">
 							<div class="card-header header-elements-sm-inline">
 								<h6 class="card-title">Support tickets</h6>
@@ -2247,11 +2256,12 @@
 									</tbody>
 								</table>
 							</div>
-						</div>
+						</div>/-->
 						<!-- /support tickets -->
 
 
 						<!-- Latest posts -->
+						<!--
 						<div class="card">
 							<div class="card-header header-elements-inline">
 								<h6 class="card-title">Latest posts</h6>
@@ -2347,7 +2357,7 @@
 									</div>
 								</div>
 							</div>
-						</div>
+						</div>/-->
 						<!-- /latest posts -->
 
 					</div>
@@ -2355,40 +2365,48 @@
 					<div class="col-xl-4">
 
 						<!-- Progress counters -->
+						<!--
 						<div class="row">
-							<div class="col-sm-6">
+							<div class="col-sm-6">/-->
 
 								<!-- Available hours -->
+								<!--
 								<div class="card text-center">
-									<div class="card-body">
+									<div class="card-body">/-->
 
 					                	<!-- Progress counter -->
-										<div class="svg-center position-relative" id="hours-available-progress"></div>
+					                	<!--
+										<div class="svg-center position-relative" id="hours-available-progress"></div>/-->
 										<!-- /progress counter -->
 
 
 										<!-- Bars -->
-										<div id="hours-available-bars"></div>
+										<!--
+										<div id="hours-available-bars"></div>/-->
 										<!-- /bars -->
 
 									</div>
 								</div>
 								<!-- /available hours -->
+								<!--
 
 							</div>
 
-							<div class="col-sm-6">
+							<div class="col-sm-6">/-->
 
 								<!-- Productivity goal -->
+								<!--
 								<div class="card text-center">
-									<div class="card-body">
+									<div class="card-body">/-->
 
 										<!-- Progress counter -->
-										<div class="svg-center position-relative" id="goal-progress"></div>
+										<!--
+										<div class="svg-center position-relative" id="goal-progress"></div>/-->
 										<!-- /progress counter -->
 
 										<!-- Bars -->
-										<div id="goal-bars"></div>
+										<!--
+										<div id="goal-bars"></div>/-->
 										<!-- /bars -->
 
 									</div>
@@ -2401,6 +2419,7 @@
 
 
 						<!-- Daily sales -->
+						<!--
 						<div class="card">
 							<div class="card-header header-elements-inline">
 								<h6 class="card-title">Daily sales stats</h6>
@@ -2547,11 +2566,12 @@
 									</tbody>
 								</table>
 							</div>
-						</div>
+						</div>/-->
 						<!-- /daily sales -->
 
 
 						<!-- My messages -->
+						<!--
 						<div class="card">
 							<div class="card-header header-elements-inline">
 								<h6 class="card-title">My messages</h6>
@@ -2559,9 +2579,10 @@
 									<span><i class="icon-history text-warning mr-2"></i> Jul 7, 10:30</span>
 									<span class="badge bg-success align-self-start ml-3">Online</span>
 								</div>
-							</div>
+							</div>/-->
 
 							<!-- Numbers -->
+							<!--
 							<div class="card-body py-0">
 								<div class="row text-center">
 									<div class="col-4">
@@ -2585,7 +2606,7 @@
 										</div>
 									</div>
 								</div>
-							</div>
+							</div>/-->
 							<!-- /numbers -->
 
 
@@ -2595,6 +2616,7 @@
 
 
 							<!-- Tabs -->
+							<!--
 		                	<ul class="nav nav-tabs nav-tabs-solid nav-justified bg-indigo-400 border-x-0 border-bottom-0 border-top-indigo-300 mb-0">
 								<li class="nav-item">
 									<a href="#messages-tue" class="nav-link font-size-sm text-uppercase active" data-toggle="tab">
@@ -2613,11 +2635,12 @@
 										Friday
 									</a>
 								</li>
-							</ul>
+							</ul>/-->
 							<!-- /tabs -->
 
 
 							<!-- Tabs content -->
+							<!--
 							<div class="tab-content card-body">
 								<div class="tab-pane active fade show" id="messages-tue">
 									<ul class="media-list">
@@ -2857,7 +2880,7 @@
 										</li>
 									</ul>
 								</div>
-							</div>
+							</div>/-->
 							<!-- /tabs content -->
 
 						</div>
@@ -2865,6 +2888,7 @@
 
 
 						<!-- Daily financials -->
+						<!--
 						<div class="card">
 							<div class="card-header header-elements-inline">
 								<h6 class="card-title">Daily financials</h6>
@@ -2959,7 +2983,7 @@
 									</li>
 								</ul>
 							</div>
-						</div>
+						</div>/-->
 						<!-- /daily financials -->
 
 					</div>
@@ -2971,6 +2995,7 @@
 
 
 			<!-- Footer -->
+			<!--
 			<div class="navbar navbar-expand-lg navbar-light">
 				<div class="text-center d-lg-none w-100">
 					<button type="button" class="navbar-toggler dropdown-toggle" data-toggle="collapse" data-target="#navbar-footer">
@@ -2990,7 +3015,7 @@
 						<li class="nav-item"><a href="https://themeforest.net/item/limitless-responsive-web-application-kit/13080328?ref=kopyov" class="navbar-nav-link font-weight-semibold"><span class="text-pink-400"><i class="icon-cart2 mr-2"></i> Purchase</span></a></li>
 					</ul>
 				</div>
-			</div>
+			</div>/-->
 			<!-- /footer -->
 
 		</div>
