--- a/full/index.html
+++ b/full/index.html
@@ -540,7 +540,7 @@
 						<li class="nav-item nav-item-submenu">
 							<a href="#" class="nav-link"><i class="icon-grid"></i> <span>PAGO DE TRANSPORTE</span></a>
 							<ul class="nav nav-group-sub" data-submenu-title="Basic components">
-								<li class="nav-item"><a href="components_modals.html" class="nav-link">TABLA DE PAGO</a></li>
+								<li class="nav-item"><a href="components_modals.html" class="nav-link">FORMULARIO DE PAGO</a></li>
 								
 							</ul>
 							
