--- a/full/picker_date.html
+++ b/full/picker_date.html
@@ -522,7 +522,12 @@
 								<li class="nav-item"><a href="picker_location.html" class="nav-link">EDITAR</a></li>
 							</ul>
 						</li>
-						
+						<li class="nav-item nav-item-submenu nav-item-expanded nav-item-open">
+							<a href="#" class="nav-link"><i class="icon-select2"></i> <span>PAGO DE TRANSPORTE</span></a>
+							<ul class="nav nav-group-sub" data-submenu-title="Pickers">
+								<li class="nav-item"><a href="components_modals.html" class="nav-link active">PAGO DE TRANSPORTE</a></li>
+							</ul>
+						</li>
 							</ul>
 						</li>
 						<!-- /forms -->
